[package]
name = "muko_bank"
version = "0.1.0"
edition = "2021"

# See more keys and ther definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kafka = "0.9"

# Json stuff
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time lib
chrono = "0.4"

# random num generator
rand = "0.8.5"

# CLI menu
terminal-menu = "2.0.4"

# redis client
redis = "0.21.5"

[dependencies.uuid]
version = "1.1.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
